--- a/index.html
+++ b/index.html
@@ -25,19 +25,9 @@
             scrollbar-width: none;  /* Firefox */
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
-  }
-}
-</script>
 </head>
 <body class="text-slate-200">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
